изменения после валидатора

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <ul class="team-soc-list">
                 <li class="team-soc-item">
                     <a href="" class="team-soc-link">
-                        <svg class="team-soc-icon" width="20" height="20"> <use href="./images/icons.svg#icon-instagram"></svg>
+                        <svg class="team-soc-icon" width="20" height="20"> <use href="./images/icons.svg#icon-instagram"></use></svg>
                     </a>
                 </li>
                 <li class="team-soc-item">
